[package]
name = "rust-sign"
version = "0.1.0"
authors = ["MikeCamel <mike@p2ptrust.org>"]
edition = "2018"
license = "Apache-2.0"
description = "Simple signing server, written in Rust"
exclde = [ ".gitignore", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"]}
rand = "0.7.3"
tokio = { version = "0.2", features = ["macros"]}
warp = {version = "0.2", features = ["tls"]}
serde = { version = "1.0", features = ["derive"]}
http = "0.2"
openssl = { version = "0.10", features = ["vendored"]}
config = "0.10.1"